# glimpse

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/glimpse/: attribute.hpp  buffer.hpp  buffer_format.hpp  data.hpp  error.hpp  framebuffer.hpp  gl.hpp  image_format.hpp  member.hpp  program.hpp  renderbuffer.hpp  texture.hpp  texture_3d.hpp  texture_array.hpp  texture_cube.hpp  types.hpp  uniform.hpp  vertex_array.hpp
src/: attribute.cpp  buffer.cpp  error.cpp  framebuffer.cpp  image_format.cpp  member.cpp  program.cpp  renderbuffer.cpp  texture.cpp  texture_3d.cpp  texture_array.cpp  texture_cube.cpp  types.cpp  uniform.cpp  vertex_array.cpp
